RESOLVED FIXED89387
Fix framebuffer-object-attachment.html failures
https://bugs.webkit.org/show_bug.cgi?id=89387
Summary Fix framebuffer-object-attachment.html failures
Zhenyao Mo
Reported 2012-06-18 15:05:17 PDT
A few bugs 1) in DEPTH_STENCIL_ATTACHMENT we put DEPTH_STENCIL 2) we should always do the re-attachments after removing an attachment buffer (either through framebufferRenderbuffer/framebufferTexture using a null buffer or deleteRenderbuffer/deleteTexture) due to the depth/stencil/depth_stencil conflicts 3) getParameter(DEPTH_BITS/STENCIL_BITS) bug: right now we assume it's always from drawing buffer
Attachments
Patch (11.00 KB, patch)
2012-06-18 15:15 PDT, Zhenyao Mo
kbr: review+
Zhenyao Mo
Comment 1 2012-06-18 15:15:32 PDT
Zhenyao Mo
Comment 2 2012-06-18 15:17:47 PDT
Test change will be added in a separate patch. This is because likely this patch needs to be merged back to chrome M21, and separating the tests change in another patch will reduce the possibility of conflicts.
Kenneth Russell
Comment 3 2012-06-18 15:24:14 PDT
Comment on attachment 148185 [details] Patch Looks good. I understand that this is being checked in separately from an updated version of the framebuffer-object-attachment.html layout test to make it easier to backport this fix; let's please update that test and its expectations ASAP though. r=me
Zhenyao Mo
Comment 4 2012-06-18 15:38:28 PDT
Note You need to log in before you can comment on or make changes to this bug.