Fix framebuffer-object-attachment.html failures https://bugs.webkit.org/show_bug.cgi?id=89387

Reviewed by Kenneth Russell.

* html/canvas/WebGLFramebuffer.cpp: fix detachment behavior with depth/stencil/depth_stencil conflicts
(WebCore::WebGLFramebuffer::setAttachmentForBoundFramebuffer):
(WebCore::WebGLFramebuffer::removeAttachmentFromBoundFramebuffer):
* html/canvas/WebGLFramebuffer.h:
(WebGLFramebuffer):
* html/canvas/WebGLRenderingContext.cpp:
(WebCore):
(WebCore::WebGLRenderingContext::framebufferRenderbuffer): move logic to WebGLFramebuffer
(WebCore::WebGLRenderingContext::framebufferTexture2D): Ditto.
(WebCore::WebGLRenderingContext::getParameter): Correct the wrong assumption that it's always checking the drawingbuffer's DEPTH_BITS/STENCIL_BITS
* html/canvas/WebGLRenderingContext.h:
(WebGLRenderingContext):


Canonical link: https://commits.webkit.org/107247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120636 268f45cc-cd09-0410-ab3c-d52691b4dbfc